fix(ui): fix ProductGallery z-index issue

--- a/src/shared/ui/grid-with-inner-border/grid-with-inner-border.m.scss
+++ b/src/shared/ui/grid-with-inner-border/grid-with-inner-border.m.scss
@@ -19,7 +19,6 @@
     &::after {
       content: "";
       position: absolute;
-      z-index: 1;
     }
 
     /** row line at the bottom of each row */
